grammar.js
    source_file: $ => seq(
      any_amount_of($._definition),
      optional("\0")
    ),

    _definition: $ => seq(
      $._statement,
    ),

    library_statement: $ => seq(
      /library/i,
      field('path', $.string)
    ),

    function_start: () => /function/i,

    function_statement: $ => alias($._function_statement, 'function_declaration'),

    _function_statement: $ => seq(
      repeat($.decorator),
      seq($.function_start, /\s*/, field("name", $.identifier)),
      $.function_impl
    ),

    sub_start: () => /sub/i,

    sub_statement: $ => alias($._sub_statement, 'function_declaration'),

    _sub_statement: $ => seq(
      repeat($.decorator),
      seq($.sub_start, /\s*/, field("name", $.identifier)),
      $.sub_impl
    ),

    _statement: $ => prec.right(1, choice(
      $.function_declaration,  // BrighterScript function/sub declaration
      $.sub_statement,  // Legacy BrightScript
      $.function_statement,  // Legacy BrightScript
      $.library_statement,
      $.constant,
      $.const_declaration,
      $.class_declaration,
      $.interface_declaration,
      $.namespace_declaration,
      $.enum_declaration,
      $.import_declaration,
      $.if_statement,
      $.conditional_compl,
      $.while_statement,
      $.for_statement,
      $.try_statement,
      $._single_line_statement,
      // $.expression_statement,
    )),

    _expression: $ => choice(
      $.call_expression,
      $.member_expression,
      $.array_access_expression,
      $.identifier,
      $.prefix_exp,
      $.string,
      $.number,
      $.literal,
      $.binary_expression,
      $.unary_expression,
      $.annonymous_sub,
      $.annonymous_function,
      $.source_literal,
      $.template_string,
      $.regex,
      $.ternary_expression,
      $.super
    ),

    while_statement: $ => seq(
      alias(/while/i, $.while_start),
      field('condition', $._expression),
      optional(field('body', $.block)),
      $.end_statement
    ),

    try_statement: $ => seq(
      alias(/try/i, $.try_start),
      optional(field('body', $.block)),
      optional(field('handler', $.catch_clause)),
      $.end_statement
    ),

    catch_clause: $ => seq(
      alias(/catch/i, $.try_catch),
      field('exception', $.identifier),
      optional(field('body', $.block))
    ),

    exit_while_statement: $ => seq(
      /exit/i,
      /while/i
    ),

    return_statement: $ => prec.right(PREC.RETURN, seq(
      /return/i,
      optional($._expression)
    )),

    assignment_statement: $ => prec(PREC.ASSIGNMENT, seq(
      field('left', $._var),
      field('operator', choice('=', '+=', '-=', '*=', '/=', '\\=', '<<=', '>>=')),
      field('right', $._expression)
    )),

    print_statement: $ => seq(
      alias(choice(/print/i, '?'), $.print),
      field('arguments', seq($._expression, repeat(seq(choice(',', ';'), $._expression)))),
    ),

    throw_statement: $ => prec.right(PREC.THROW, seq(
      alias(/throw/i, $.throw),
      optional(field('value', $._expression))
    )),

    block: $ => repeat1(
      $._statement
    ),

    parameter_list: $ => seq(
      '(',
      commaSep($.parameter),
      ')'
    ),

    parameter: $ => seq(
      field('name', $.identifier),
      optional(seq('=', $._expression)),
      optional(
        field('type', $.type_annotation)
      )
    ),

    return_type: $ => field('return_type', $.type_annotation),

    type_annotation: $ => seq(
      /as/i,
      $.type_identifier
    ),

    _prefix_exp: ($) =>
      choice(
        $.function_call,
        seq($.left_paren, $._expression, $.right_paren)
      ),

    left_paren: (_) => "(",
    right_paren: (_) => ")",

    prefix_exp: ($) => $._prefix_exp,

    _var: ($) =>
      choice(
        $.identifier,
        $.member_expression,
        $.array_access_expression
      ),

    // Expressions
    call_expression: $ => prec(15,seq(
      field('function', choice(
        $.identifier,
        $.property_access_expression,
        $.member_expression
      )),
      field('arguments', $.arguments)
    )),

    binary_expression: $ => choice(
      prec.left(PREC.LOGICAL, seq(field('left', $._expression), field('operator', $.and), field('right', $._expression))),
      prec.left(PREC.LOGICAL, seq(field('left', $._expression), field('operator', $.or),  field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.equals),   field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.not_equals),  field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.less_than),   field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.less_than_or_equal),  field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.greater_than),   field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.greater_than_or_equal),  field('right', $._expression))),
      prec.left(PREC.COMPARISON, seq(field('left', $._expression), field('operator', $.null_coalescing),  field('right', $._expression))),
      prec.left(PREC.ADDITIVE, seq(field('left', $._expression), field('operator', $.plus), field('right', $._expression))),
      prec.left(PREC.ADDITIVE, seq(field('left', $._expression), field('operator', $.minus), field('right', $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field('left', $._expression), field('operator', $.multiply),  field('right', $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field('left', $._expression), field('operator', $.divide),  field('right', $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field('left', $._expression), field('operator', $.backslash),  field('right', $._expression))),
      prec.left(PREC.MULTIPLICATIVE, seq(field('left', $._expression), field('operator', $.mod), field('right', $._expression)))
    ),

    unary_expression: $ => prec.right(PREC.UNARY, choice(
      $.logical_not_expression,
    )),

    logical_not_expression: $ => prec.right(PREC.LOGICAL_NOT, seq(
      field('operator', $.not),
      field('argument', $._expression)
    )),

    arguments: $ => seq(
      '(',
      commaSep($._expression),
      ')'
    ),

    member_expression: $ => prec.left(3, seq(
      field('object', choice(
        $.identifier,
        $.super,
        $.member_expression
      )),
      '.',
      field('property', $.property_identifier)
    )),

    literal: $ => choice(
      $.invalid,
      $.boolean,
      $.array,
      $.assoc_array
    ),

    boolean: $ => choice(
      /true/i,
      /false/i
    ),

    number: $ => /-?\d+(\.\d+)?/,

    string: $ => seq(
      '"',
      repeat(choice(
        alias(/[^"]+/, $.string_content),
        alias(seq('""'), $.escaped_quote)
      )),
      '"'
    ),

    invalid: $ => /invalid/i,

    array: $ => seq(
      '[',
      optional(commaSep($._expression)),
      ']'
    ),

    not: $ => /not/i,
    and: $ => /and/i,
    plus: $ => '+',
    divide: $ => '/',
    backslash: $ => '\\',
    less_than: $ => '<',
    greater_than: $ => '>',
    greater_than_or_equal: $ => '>=',
    statement_block: $ => repeat1($._statement),

    namespace_declaration: $ => seq(
      /namespace/i,
      field('name', $.namespace_name),
      field('body', $.namespace_body),
      /end\s+namespace/i
    ),

    namespace_name: $ => sep1($.identifier, '.'),

    namespace_body: $ => repeat1(choice(
      $.class_declaration,
      $.function_declaration
    )),

    // BrighterScript function declaration (used in namespaces, as top-level declarations)
    function_declaration: $ => seq(
      repeat($.decorator),
      choice(/function/i, /sub/i),
      field('name', $.identifier),
      field('parameters', $.parameter_list),
      optional(field('return_type', $.type_annotation)),
      field('body', $.statement_block),
      /end\s+(function|sub)/i
    ),

    // Type annotations
    type_annotation: $ => seq(
      /as/i,
      $.type_identifier
    ),

    type_identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/)),
    property_identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/)),

    // Super keyword for inheritance
    end_sub: $ => /end\s+sub/i,
    end_function: $ => /end\s+function/i,
    end_while: $ => /end\s+while/i,
    end_try: $ => /end\s+try/i,
    end_statement: $ => choice(
      $.end_sub,
      $.end_function,
      $.end_if,
      $.conditional_compl_end_if,
      $.end_for,
      $.end_while,
      $.end_try
    ),

    template_string: $ => seq(
      '`',
      repeat(choice(
        $.template_fragment,
        $.template_interpolation
      )),
      '`'
    ),

    template_fragment: $ => token.immediate(prec(1, /[^`$]+/)),

    template_interpolation: $ => seq(
      '${',
      $._expression,
      '}'
    ),

    // Regular expressions
    regex: $ => seq(
      '/',
      field('pattern', $.regex_pattern),
      '/',
      optional(field('flags', $.regex_flags))
    ),

    regex_pattern: $ => token.immediate(prec(1, /([^\/\n\r]|\\.)+/)),
    regex_flags: $ => token.immediate(/[igms]+/),

    // Ternary operator
    ternary_expression: $ => prec.right(PREC.TERNARY, seq(
      field('condition', $._expression),
      '?',
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression)
    )),

    // Miscellaneous
    identifier: $ => token(prec(0, /[a-zA-Z_][a-zA-Z0-9_]*/))
  }
});

function commaSep(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          ',',
          rule
        )
      )
    )
  )
}

function commaSepNewLine(rule) {
  return optional(
    seq(
      rule,
      repeat(
        seq(
          optional(','),
          rule
        )
      )
    )
  )
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(',', rule)));
}

function any_amount_of() {
  return repeat(seq(...arguments));
}

function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
