test/corpus/source_literals.txt
==================
SOURCE_FILE_PATH literal
==================

sub test()
    print SOURCE_FILE_PATH
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (print_statement
          (print)
          (identifier)))
      (end_statement
        (end_sub))))

==================
SOURCE_LINE_NUM literal
==================

sub test()
    print SOURCE_LINE_NUM
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (print_statement
          (print)
          (identifier)))
      (end_statement
        (end_sub))))

==================
SOURCE_FUNCTION_NAME literal
==================

namespace Human.Versus.Zombie
    function Eat()
        print SOURCE_FUNCTION_NAME
    end function
end namespace
---

(source_file
  (namespace_declaration
    (namespace_name
      (identifier)
      (identifier)
      (identifier))
    (namespace_body
      (function_declaration
        (identifier)
        (parameter_list)
        (statement_block
          (print_statement
            (print)
            (identifier)))))))

==================
SOURCE_NAMESPACE_NAME literal
==================

namespace Human.Versus.Zombie
    function Eat()
        print SOURCE_NAMESPACE_NAME
    end function
end namespace
---

(source_file
  (namespace_declaration
    (namespace_name
      (identifier)
      (identifier)
      (identifier))
    (namespace_body
      (function_declaration
        (identifier)
        (parameter_list)
        (statement_block
          (print_statement
            (print)
            (identifier)))))))

==================
SOURCE_NAMESPACE_ROOT_NAME literal
==================

namespace Human.Versus.Zombie
    function Eat()
        print SOURCE_NAMESPACE_ROOT_NAME
    end function
end namespace
---

(source_file
  (namespace_declaration
    (namespace_name
      (identifier)
      (identifier)
      (identifier))
    (namespace_body
      (function_declaration
        (identifier)
        (parameter_list)
        (statement_block
          (print_statement
            (print)
            (identifier)))))))

==================
SOURCE_LOCATION literal
==================

function main()
    print SOURCE_LOCATION
end function
---

(source_file
  (function_statement
      (function_start)
      (identifier)
      (parameter_list)
      (block
        (print_statement
          (print)
          (identifier)))
      (end_statement
        (end_function))))

==================
PKG_PATH literal
==================

function main()
    print PKG_PATH
end function
---

(source_file
  (function_statement
      (function_start)
      (identifier)
      (parameter_list)
      (block
        (print_statement
          (print)
          (identifier)))
      (end_statement
        (end_function))))

==================
PKG_LOCATION literal
==================

function main()
    print PKG_LOCATION
end function
---

(source_file
  (function_statement
      (function_start)
      (identifier)
      (parameter_list)
      (block
        (print_statement
          (print)
          (identifier)))
      (end_statement
        (end_function))))

==================
Multiple source literals
==================

sub test()
    logMessage = SOURCE_FILE_PATH + ":" + SOURCE_LINE_NUM
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (binary_expression
            (binary_expression
              (identifier)
              (plus)
              (string
                (string_content)))
            (plus)
            (identifier))))
      (end_statement
        (end_sub))))
