test/corpus/statements.txt
==================
Print statement without params
==================

sub x()
    print("hi")
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (print_statement
          (print)
          (prefix_exp
            (left_paren)
            (string
              (string_content))
            (right_paren))))
      (end_statement
        (end_sub))))

==================
Print statements with params
==================

sub x(y as string)
    print(y)
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (type_identifier))))
      (block
        (print_statement
          (print)
          (prefix_exp
            (left_paren)
            (identifier)
            (right_paren))))
      (end_statement
        (end_sub))))

==================
Print statements with comma sep params
==================

sub x(y as string, x as string)
    print(x)
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list
        (parameter
          (identifier)
          (type_annotation
            (type_identifier)))
        (parameter
          (identifier)
          (type_annotation
            (type_identifier))))
      (block
        (print_statement
          (print)
          (prefix_exp
            (left_paren)
            (identifier)
            (right_paren))))
      (end_statement
        (end_sub))))

==================
function return type string
==================

function x() as string
    return "hi"
end function
---

(source_file
  (function_statement
      (function_start)
      (identifier)
      (parameter_list)
      (return_type
        (type_annotation
          (type_identifier)))
      (block
        (return_statement
          (string
            (string_content))))
      (end_statement
        (end_function))))

==================
Library definition
==================

Library "Roku_Ads.brs"

sub x()
    print("hi")
end sub
---

(source_file
  (library_statement
    (string
      (string_content)))
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (print_statement
          (print)
          (prefix_exp
            (left_paren)
            (string
              (string_content))
            (right_paren))))
      (end_statement
        (end_sub))))

==================
invalid return statement
==================

function x() as object
    return invalid
end function
---

(source_file
  (function_statement
      (function_start)
      (identifier)
      (parameter_list)
      (return_type
        (type_annotation
          (type_identifier)))
      (block
        (return_statement
          (literal
            (invalid))))
      (end_statement
        (end_function))))

==================
Print statement as shortcut
==================

sub x()
    ?"hi"
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (print_statement
          (print)
          (string
            (string_content))))
      (end_statement
        (end_sub))))
