test/corpus/statements_1.txt
==================
assignment statement
==================

sub init()
    x = "bruh"
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (string
            (string_content))))
      (end_statement
        (end_sub))))

==================
property_access_expression
==================

sub init()
    m.b = "y"
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (member_expression
            (identifier)
            (property_identifier))
          (string
            (string_content))))
      (end_statement
        (end_sub))))

==================
property_access_expression recursive
==================

sub init()
    m.b.c = "y"
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (member_expression
            (member_expression
              (identifier)
              (property_identifier))
            (property_identifier))
          (string
            (string_content))))
      (end_statement
        (end_sub))))

==================
Multiplicitive expression
==================

sub init()
    test = 5 \ 4
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (binary_expression
            (number)
            (backslash)
            (number))))
      (end_statement
        (end_sub))))
