test/corpus/ternary_operator.txt
==================
Basic ternary operator
==================

sub test()
    value = isTrue ? "yes" : "no"
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (ternary_expression
            (identifier)
            (string
              (string_content))
            (string
              (string_content)))))
      (end_statement
        (end_sub))))

==================
Ternary with expression condition
==================

sub test()
    result = (x > 10) ? "big" : "small"
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (ternary_expression
            (prefix_exp
              (left_paren)
              (binary_expression
                (identifier)
                (greater_than)
                (number))
              (right_paren))
            (string
              (string_content))
            (string
              (string_content)))))
      (end_statement
        (end_sub))))

==================
Ternary with function calls
==================

sub test()
    value = condition ? getValue() : getDefault()
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (ternary_expression
            (identifier)
            (call_expression
              (identifier)
              (arguments))
            (call_expression
              (identifier)
              (arguments)))))
      (end_statement
        (end_sub))))

==================
Nested ternary
==================

sub test()
    level = score > 90 ? "A" : score > 80 ? "B" : "C"
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (ternary_expression
            (binary_expression
              (identifier)
              (greater_than)
              (number))
            (string
              (string_content))
            (ternary_expression
              (binary_expression
                (identifier)
                (greater_than)
                (number))
              (string
                (string_content))
              (string
                (string_content))))))
      (end_statement
        (end_sub))))

==================
Ternary with array access
==================

sub test()
    data = isTrue ? ["key"] : getFalseData()
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (ternary_expression
            (identifier)
            (literal
              (array
                (string
                  (string_content))))
            (call_expression
              (identifier)
              (arguments)))))
      (end_statement
        (end_sub))))

==================
Ternary with parenthesized expression
==================

sub test()
    data = isTrue ? (1 + 2) : getFalseData()
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (ternary_expression
            (identifier)
            (prefix_exp
              (left_paren)
              (binary_expression
                (number)
                (plus)
                (number))
              (right_paren))
            (call_expression
              (identifier)
              (arguments)))))
      (end_statement
        (end_sub))))
