test/corpus/try_catch_statements.txt
==================
basic try-catch statement
==================

sub init()
  try
    x = 10 / 0
  catch ex
    print "Caught exception: " + ex.message
  end try
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (try_statement
          (try_start)
          (block
            (assignment_statement
              (identifier)
              (binary_expression
                (number)
                (divide)
                (number))))
          (catch_clause
            (try_catch)
            (identifier)
            (block
              (print_statement
                (print)
                (binary_expression
                  (string
                    (string_content))
                  (plus)
                  (member_expression
                    (identifier)
                    (property_identifier))))))
          (end_statement
            (end_try))))
      (end_statement
        (end_sub))))

==================
basic throw statement
==================

sub init()
	throw "error"
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (throw_statement
          (throw)
          (string
            (string_content))))
      (end_statement
        (end_sub))))
