test/corpus/while_statements.txt
==================
while statement
==================

sub init()
    y = 0
    while true
        y = y + 1
    end while
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (number))
        (while_statement
          (while_start)
          (literal
            (boolean))
          (block
            (assignment_statement
              (identifier)
              (binary_expression
                (identifier)
                (plus)
                (number))))
          (end_statement
            (end_while))))
      (end_statement
        (end_sub))))

==================
while statement more complex expression
==================

sub init()
    y = 0
    while y < 10 and y >= -1
        y = y + 1
    end while
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (number))
        (while_statement
          (while_start)
          (binary_expression
            (binary_expression
              (identifier)
              (less_than)
              (number))
            (and)
            (binary_expression
              (identifier)
              (greater_than_or_equal)
              (number)))
          (block
            (assignment_statement
              (identifier)
              (binary_expression
                (identifier)
                (plus)
                (number))))
          (end_statement
            (end_while))))
      (end_statement
        (end_sub))))

==================
while statement with function call
==================

sub init()
    y = 0
    while isValid(y)
        y = y + 1
    end while
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (number))
        (while_statement
          (while_start)
          (call_expression
            (identifier)
            (arguments
              (identifier)))
          (block
            (assignment_statement
              (identifier)
              (binary_expression
                (identifier)
                (plus)
                (number))))
          (end_statement
            (end_while))))
      (end_statement
        (end_sub))))

==================
while statement with not expression
==================

sub init()
    y = 0
    while not (y > 10)
        y = y + 1
    end while
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (number))
        (while_statement
          (while_start)
          (unary_expression
            (logical_not_expression
              (not)
              (prefix_exp
                (left_paren)
                (binary_expression
                  (identifier)
                  (greater_than)
                  (number))
                (right_paren))))
          (block
            (assignment_statement
              (identifier)
              (binary_expression
                (identifier)
                (plus)
                (number))))
          (end_statement
            (end_while))))
      (end_statement
        (end_sub))))

==================
nested while statements
==================

sub init()
    x = 0
    y = 0
    while x < 5
        while y < 3
            print(x + y)
            y = y + 1
        end while
        x = x + 1
    end while
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (assignment_statement
          (identifier)
          (number))
        (assignment_statement
          (identifier)
          (number))
        (while_statement
          (while_start)
          (binary_expression
            (identifier)
            (less_than)
            (number))
          (block
            (while_statement
              (while_start)
              (binary_expression
                (identifier)
                (less_than)
                (number))
              (block
                (print_statement
                  (print)
                  (prefix_exp
                    (left_paren)
                    (binary_expression
                      (identifier)
                      (plus)
                      (identifier))
                    (right_paren)))
                (assignment_statement
                  (identifier)
                  (binary_expression
                    (identifier)
                    (plus)
                    (number))))
              (end_statement
                (end_while)))
            (assignment_statement
              (identifier)
              (binary_expression
                (identifier)
                (plus)
                (number))))
          (end_statement
            (end_while))))
      (end_statement
        (end_sub))))

==================
while statement with exit while
==================

sub init()
    while true
        exit while
    end while
end sub
---

(source_file
  (sub_statement
      (sub_start)
      (identifier)
      (parameter_list)
      (block
        (while_statement
          (while_start)
          (literal
            (boolean))
          (block
            (exit_while_statement))
          (end_statement
            (end_while))))
      (end_statement
        (end_sub))))
